Networkpolices/allowtrafficfrom_atob.yaml
#This Policy Will Allow Traffic Between PODs in a NS with Label 
#ns=a
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-within-a-namespace
  namespace: a
spec:
  podSelector: 
   matchLabels:
    ns: a
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          ns: a
  egress:
  - to:
    - podSelector:
        matchLabels:
          ns: a

#This Policy Will Allow Traffic Between PODs in a NS with Label 
#ns=b
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-within-b-namespace
  namespace: b
spec:
  podSelector: 
   matchLabels:
    ns: b
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          ns: b
  egress:
  - to:
    - podSelector:
        matchLabels:
          ns: b
