Networkpolices/denyalltraffic.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: nginx1
  policyTypes:
  - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: nginx1
  policyTypes:
  - Egress

#Block both Ingress & Egress for default Namespace.
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-to-default
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
