Networkpolices/denyalltrafficto_ns_ab.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-bravo
  namespace: a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-charlie
  namespace: a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
